--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Image Finder</title>
 </head>
 <body>
+    <section class="section">
+    <h1>Image Finder</h1>
+    <div class="form-wrapper"></div>
     <ul class="gallery">
-        
+    </section>
     </ul>
 </body>
 </html>
